...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InfoNeighbourActivity"
    android:background="@color/colorBackground"
    android:id="@+id/activity_info_neighbour">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
...
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/name_on_avatar_neighbour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/avatar_neighbour"
                android:text="@string/name_on_avatar"
                android:textColor="#FFFFFF"
...
